Refined Makefile. Included documentation in report

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -4,6 +4,10 @@
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 \usepackage{mathtools}
+\usepackage{textcomp}
+\usepackage{fullpage}
+\usepackage{url}
+\usepackage{ocamldoc}
 
 \begin{document}
 
@@ -44,4 +48,6 @@ $$\psi
     \displaystyle\bigwedge_{j \in C}
     (\neg p_{i,j} \lor \neg p_{i', j})
     $$
+
+\input{ocamldoc.tex}
 \end{document}
